#############################################################################
BETA PUBLIC RELEASE VERSION 0.2.6       01-17-02
#############################################################################
 
  * Changed license to GPL 
  * Made a few routines compliant with ANSI X3.159-1989 by 
	removing snprintf (compliant with ISO/IEC 9899:1999).  This is basically
    for the sake of OSF support.


#############################################################################
BETA PUBLIC RELEASE VERSION 0.2.5       11-21-02
#############################################################################

  * Improved consistency between energies evaluated with "chgm 0" and "chgm 1"
  * Made charge-field energy evaluation consistent for user-supplied charge
    maps
  * Added new psize.py script courtesy of Todd Dolinsky.
  * Updated list of APBS-related tools in User Guide.
  * Added RPM capabilities courtesy of Steve Bond.
  * Removed annoying excess verbosity from Vgrid.
  * Updated Blue Horizon compilation instructions (thanks to Robert Konecny and
    Giri Chukkapalli)
  * Updated autoconf/automake/libtool setup and added --disable-tools option

#############################################################################
BETA PUBLIC RELEASE VERSION 0.2.4       10-21-02
#############################################################################

  * Fixed bug which set one of the  z-boundaries to zero for "bcfl 1".  This
	can perturb results for systems where the grid boundaries are particularly
	close to the biomolecule.  While this is an embarassing bug, most systems
    using settings suggested by the psize script appear largely unaffected
	(see examples/README.html).  Thanks to Michael Grabe for finding this bug
    (Michael, you can stop finding bugs now...)
  * Updated VMD scripts to agree with the current OpenDX output format
  * A COMMENT:  As far as I can tell, the current version of OpenDX-formatted